--- a/wilma-service-api-.net/WilmaServiceTestConsoleApp/WilmaServiceTestConsoleApp.csproj
+++ b/wilma-service-api-.net/WilmaServiceTestConsoleApp/WilmaServiceTestConsoleApp.csproj
@@ -12,6 +12,7 @@
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
+    <NuGetPackageImportStamp>b47f6660</NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
