--- a/wilma-service-api-.net/wilma-service-api/packages.config
+++ b/wilma-service-api-.net/wilma-service-api/packages.config
@@ -5,4 +5,5 @@
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="portable-net40+sl50+win+wpa81+wp80" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable-net40+sl50+win+wpa81+wp80" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="portable-net40+sl50+win+wpa81+wp80" />
+  <package id="Vsxmd" version="1.1.0" targetFramework="portable-net40+sl50+win+wpa81+wp80" developmentDependency="true" />
 </packages>
