--- a/wilma-service-api-net/wilma-service-api-tests/wilma-service-api-tests.csproj
+++ b/wilma-service-api-net/wilma-service-api-tests/wilma-service-api-tests.csproj
@@ -85,6 +85,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="FakeHttpMessageHandler.cs" />
+    <Compile Include="LoggerImpl.cs" />
     <Compile Include="WilmaServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WilmaServiceConfigTests.cs" />
