--- a/wilma-service-api-net/wilma-service-api/wilma-service-api.csproj
+++ b/wilma-service-api-net/wilma-service-api/wilma-service-api.csproj
@@ -36,6 +36,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="ILogger.cs" />
     <Compile Include="ServiceCommClasses\LocalhostControlStatus.cs" />
     <Compile Include="ServiceCommClasses\LoggingStatus.cs" />
     <Compile Include="ServiceCommClasses\OperationMode.cs" />
