--- a/wilma-service-api-net/wilma-service-api/wilma-service-api.csproj
+++ b/wilma-service-api-net/wilma-service-api/wilma-service-api.csproj
@@ -31,6 +31,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\wilma-service-api.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="ILogger.cs" />
