--- a/wilma-service-api-net/WilmaServiceTestConsoleApp/WilmaServiceTestConsoleApp.csproj
+++ b/wilma-service-api-net/WilmaServiceTestConsoleApp/WilmaServiceTestConsoleApp.csproj
@@ -82,6 +82,7 @@
     <ProjectReference Include="..\wilma-service-api\wilma-service-api-net.csproj">
       <Project>{ac17ac7c-bf61-4750-951d-a1c09b32b5a1}</Project>
       <Name>wilma-service-api-net</Name>
+	<Properties>SkipValidatePackageReferences=true</Properties>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
