--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,4 +47,9 @@ jobs:
           chmod +x gradlew
           java -version
           ./gradlew build release sonar -PbuildNumber=SNAPSHOT
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v4
+        if: success() || failure() # always run even if the previous step fails
+          with:
+          report_paths: '**/build/test-results/test/TEST-*.xml'
           
