--- a/build.gradle
+++ b/build.gradle
@@ -21,13 +21,13 @@ plugins {
 }
 
 ext {
-    nettyVersion = '4.1.87.Final'
-    jettyVersion = '9.4.53.v20231009'
+    nettyVersion = '4.1.112.Final'
+    jettyVersion = '9.4.55.v20240627'
     jUnitVersion = '5.9.3'
-    mockitoCoreVersion = '5.10.0' //was '4.6.1'
+    mockitoCoreVersion = '5.11.0'
     orgSfl4jVersion = '2.0.9'
-    logbackVersion = '1.4.5'
-    googleGuavaApi = 'com.google.guava:guava:32.1.3-jre'
+    logbackVersion = '1.4.14'
+    googleGuavaApi = 'com.google.guava:guava:33.3.0-jre'
     componentName = 'wilma'
     javaxServletApi = 'javax.servlet:javax.servlet-api:3.1.0'
     javaxAnnotationApi = 'javax.annotation:javax.annotation-api:1.3.2'
